<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_medium"
        android:gravity="center">

        <TextView
            android:id="@+id/photo_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            style="@style/HeaderTextStyle"
            android:text="@string/photo_header"/>

        <TextView
            android:id="@+id/photo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            style="@style/BaseTextStyle"
            android:hint="@string/file_name"/>

        <ImageView
            android:id="@+id/photo_imageView"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/delete_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_delete_pic"
            android:text="@string/delete_photo">
        </Button>

</LinearLayout>
