<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_small"
    xmlns:tools="http://schemas.android.com/tools">

        <TextView
            android:id="@+id/gallery_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderTextStyle"
            android:text="@string/visit_gallery">
        </TextView>

        <TextView
            android:id="@+id/gallery_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            style="@style/BaseTextStyle"
            android:textSize="@dimen/normal_text_size"
            android:textAlignment="center"
            android:text="@string/gallery_explanation">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintBottom_toTopOf="@+id/delete_button"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="1"
            tools:listitem="@layout/recycler_item" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/delete_all"
            android:drawableEnd="@drawable/ic_delete_all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>